# cluster-msa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: inputs.csv
src/cluster_msa/: accelerated.py  af3.py  cli.py  clustering.py  compact_db.py  config.py  errors.py  input.py  manifest.py  models.py  output.py  standard.py  tools.py
tests/: conftest.py  smoke_helpers.py
tests/integration/: test_accelerated_cli.py  test_cli_failures.py  test_standard_cli.py
tests/smoke/: test_real_tools.py
tests/unit/: test_accelerated.py  test_af3.py  test_cli.py  test_clustering.py  test_compact_db.py  test_config.py  test_input.py  test_manifest.py  test_models.py  test_output.py  test_package.py  test_smoke_helpers.py  test_standard.py  test_tools.py
